# Burpsuite-HAR-Converter

./: .gitignore  LICENSE  README.md  pyproject.toml  readme-cn.md  readme.md  setup.py
burp2har/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  first_run.py  functions.py  har_validator.py  harlog.py  updater.py  validator.py
scripts/: update_unix.sh  update_windows.ps1
tests/: conftest.py  helpers.py  test_anonymization.py  test_cli.py  test_conversion.py  test_filters.py  test_validation.py
