# ── PEP 621 metadata (read by pip, build tools, and any PEP 517 frontend) ──────
[project]
name            = "burp2har"
version         = "0.4.2"
description     = "Convert Burp Suite XML exports to HAR format"
readme          = "README.md"
license         = {text = "MIT"}
requires-python = ">=3.8"
authors         = [{name = "Lorenzo Surico"}]
keywords        = ["burpsuite", "har", "xml", "converter", "pentesting", "security"]
dependencies    = [
    "typer>=0.9.0",
    "rich>=10.0.0",
]

[project.urls]
Homepage   = "https://github.com/xlory04/Burpsuite-HAR-Converter"
Repository = "https://github.com/xlory04/Burpsuite-HAR-Converter"

# Console script — registered by pip install / pip install -e .
[project.scripts]
burp2har = "burp2har.cli:run"

# ── Poetry metadata (used when building / publishing via Poetry) ───────────────
[tool.poetry]
name        = "burp2har"
version     = "0.4.2"
description = "Convert Burp Suite XML exports to HAR format"
authors     = ["Lorenzo Surico"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://github.com/xlory04/Burpsuite-HAR-Converter"
repository  = "https://github.com/xlory04/Burpsuite-HAR-Converter"
keywords    = ["burpsuite", "har", "xml", "converter", "pentesting", "security"]
packages    = [{include = "burp2har"}]

# Original project: https://github.com/JoryPein/BurpSuite-HAR-Exporter (MIT License)

[tool.poetry.dependencies]
python = "^3.8"
typer  = ">=0.9.0"
rich   = ">=10.0.0"

[tool.poetry.scripts]
burp2har = "burp2har.cli:run"

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
